2005-05-09 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixes the segfault when loading encoded script with eloader and php5
        * Commited README.win32 with instructions to compile eAccelerator on windows
        * Add the destructor to properties info hashtable in restore_class_entry, fixes bug 1179270

2005-05-06 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Patch fixing eLoader compilation.

2005-05-05 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * This patch fixes some stuff concerning configuration. With this patch 
          some parts that are forgotten with the code split are fixed. 
          They are also needed to compile eA with VC. The other stuff should make it possible 
          to compile eA as a static module for php.
        * Updated VC project files

2005-05-02  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Patch fixing php 5 constructor problems. Fixes bugs 1179264, 1121757 and 1099693
        * Added switch -w to encoder so you can encode file without the check for eloader. This is 
          based on patch 1191147 with some fixes.

2005-04-26  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * The first part of the code refactoring. In this part the monolitic 
          eaccelerator.c file has been split up in more logical blocks.
          - cache.c/cache.h contains the procedure for shm.c/session.c/content.c to add user_cache entries to the ea cache
          - shm.c/shm.h contains the eaccelerator shared memory functions
          - session.c/session.h contains the session related stuff
          - webui.c/webui.h contains all stuff related to the webinterface and disassembler
          - debug.c/debug.h contains some procedures to print debug information
          - content.h contains the php content caching prototype instead of eaccelerator.h
        * Added --without-eaccelerator-shared-memory and  --without-eaccelerator-webui configure switches
        