@@ -45,6 +45,7 @@
 #include "shm.h"
 #include "session.h"
 #include "content.h"
+#include "cache.h"
 
 #include <sys/types.h>
 #include <sys/stat.h>
